chore: align react types with React 18

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start -p 3000",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
+    "prisma:generate": "prisma generate --schema prisma/schema.prisma",
+    "prisma:migrate": "prisma migrate dev --schema prisma/schema.prisma",
     "seed": "node prisma/seed.cjs"
   },
   "dependencies": {
@@ -22,6 +22,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "^24.3.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.3",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.38",
     "prisma": "^6.15.0",
